@@ -536,19 +536,19 @@ description.
 
 Literal blocks are indicated with a double-colon (``::'') at the end of
 the preceding paragraph (over there \texttt{-->}).  They can be indented:
-\begin{ttfamily}\begin{flushleft}
+\begin{quote}{\ttfamily \raggedright \noindent
 if~literal{\underline{~}}block:~\\
 ~~~~text~=~'is~left~as-is'~\\
 ~~~~spaces{\underline{~}}and{\underline{~}}linebreaks~=~'are~preserved'~\\
 ~~~~markup{\underline{~}}processing~=~None
-\end{flushleft}\end{ttfamily}
+}\end{quote}
 
 Or they can be quoted without indentation:
-\begin{ttfamily}\begin{flushleft}
+\begin{quote}{\ttfamily \raggedright \noindent
 >>~Great~idea!~\\
 >~\\
 >~Why~didn't~I~think~of~that?
-\end{flushleft}\end{ttfamily}
+}\end{quote}
 
 
 %___________________________________________________________________________
